force-app/main/default/objects/LoanRequest__c/LoanRequest__c.object-meta.xml
<CustomObject>
    <label>Loan Request</label>
    <nameField>
        <label>Loan Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Loan Requests</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>