force-app/main/default/objects/LoanRequest__c/fields/Customer__c.field-meta.xml
<CustomField>
    <fullName>Customer__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>Customer</label>
    <referenceTo>Customer</referenceTo>
    <relationshipLabel>Loan Requests</relationshipLabel>
    <relationshipName>Loan_Requests</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>