force-app/main/default/objects/LoanRequest__c/fields/LoanAmount__c.field-meta.xml
<CustomField>
    <fullName>LoanAmount__c</fullName>
    <label>Loan Amount</label>
    <precision>18</precision>
    <required>true</required>
    <scale>0</scale>
    <type>Number</type>
</CustomField>