force-app/main/default/objects/LoanRequest__c/fields/RequestDate__c.field-meta.xml
<CustomField>
    <fullName>RequestDate__c</fullName>
    <label>Request Date</label>
    <type>DateTime</type>
</CustomField>