force-app/main/default/objects/LoanRequest__c/validationRules/Negative_number_check.validationRule-meta.xml
<ValidationRule>
    <fullName>Negative_number_check</fullName>
    <active>true</active>
    <errorConditionFormula>LoanAmount__c &lt;= 0</errorConditionFormula>
    <errorDisplayField>LoanAmount__c</errorDisplayField>
    <errorMessage>“Loan Amount must be positive”.</errorMessage>
</ValidationRule>